# ci_demo

./: pyproject.toml
.github/workflows/: test.yml
ci_demo/: main.py
tests/: unit_tests.py
